lab1/calculator/src/calculator.g4
grammar calculator;

file_
    :   setVar* EOF
    ;


expression
   :  <assoc=left> expression  POW expression                #pow
   |  expression  op=(TIMES | DIV)  expression               #muldiv
   |  expression  op=(PLUS | MINUS) expression               #plusmin
   |  VARIABLE                                               #var
   |  SCIENTIFIC_NUMBER                                      #scienttific_num
   |  LPAREN expression RPAREN                               #paren
   |  op=(PLUS | MINUS)* atom                                #atommul
   ;

setVar
    : expression    NL                                  #printExpr
    | expression relop expression                                  #assign
    | NL                                                    #null
    ;

atom
   : scientific
   | variable
   ;

relop :
    GT
    | LT
    | EQ
    ;

scientific
   : SCIENTIFIC_NUMBER
   ;

variable
   : VARIABLE
   ;


VARIABLE
   : VALID_ID_START VALID_ID_CHAR*
   ;


fragment VALID_ID_START
   : ('a' .. 'z') | ('A' .. 'Z') | '_'
   ;


fragment VALID_ID_CHAR
   : VALID_ID_START | ('0' .. '9')
   ;

//The NUMBER part gets its potential sign from "(PLUS | MINUS)* atom" in the expression rule
SCIENTIFIC_NUMBER
   : NUMBER (E SIGN? UNSIGNED_INTEGER)?
   ;

fragment NUMBER
   : ('0' .. '9') + ('.' ('0' .. '9') +)?
   ;

fragment UNSIGNED_INTEGER
   : ('0' .. '9')+
   ;


fragment E
   : 'E' | 'e'
   ;

fragment SIGN
   : ('+' | '-')
   ;


LPAREN
   : '('
   ;


NL : '\n'
   ;


RPAREN
   : ')'
   ;


PLUS
   : '+'
   ;


MINUS
   : '-'
   ;


TIMES
   : '*'
   ;


DIV
   : '/'
   ;


GT
   : '>'
   ;


LT
   : '<'
   ;


EQ
   : '='
   ;


POINT
   : '.'
   ;


POW
   : '^'
   ;


ID
   : [a-zA-Z]+
   ;



WS
   : [\n\r\t] + -> skip
   ;
